# tg-export

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: configuration.md
docs/superpowers/plans/: 2026-03-21-tg-export-implementation.md
docs/superpowers/specs/: 2026-03-21-tg-export-design.md
tests/: conftest.py  test_api.py  test_auth.py  test_catalog.py  test_cli.py  test_code_style.py  test_config.py  test_converter.py  test_exporter.py  test_incremental.py  test_integration.py  test_media.py  test_migration.py  test_models.py  test_monoforum.py  test_renderer.py  test_state.py  test_terminal_output.py  test_tg_commands.py  test_topics.py
tests/fixtures/: invalid_no_account.yaml  minimal_config.yaml  valid_config.yaml
tg_export/: __init__.py  __main__.py  api.py  auth.py  catalog.py  cli.py  config.py  converter.py  exporter.py  importer.py  media.py  models.py  session.py  state.py
tg_export/html/: __init__.py  renderer.py
tg_export/html/static/css/: style.css
tg_export/html/static/js/: script.js
tg_export/html/templates/: base.html.j2  chat.html.j2  contacts.html.j2  folder_index.html.j2  index.html.j2  media_block.html.j2  message.html.j2  other_data.html.j2  personal_info.html.j2  service_message.html.j2  sessions.html.j2  stories.html.j2  userpics.html.j2
