[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-export"
version = "0.1.0"
description = "Flexible Telegram data export tool"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
proxy = [
    "python-socks[asyncio]>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["tg_export*"]

[project.scripts]
tg-export = "tg_export.cli:main"
